<resources>

    <string name="category_label">Category</string>
    <string name="APP_NAME">OmniLink Client</string>
    <string name="TITLE_ACTIVITY_MAIN">OmniLink Client</string>
    <string name="BUTTONS">Buttons</string>
    <string name="SYSTEM">System</string>
    <string name="TEMPERATURE">Temperature</string>
    <string name="MESSAGES">Messages</string>
    <string name="UNITS">Units</string>
    <string name="INFORMATION">Information</string>
    <string name="MENU_CATEGORY_REFRESH">Refresh</string>
    <string name="MENU_EXIT">Exit</string>
    <string name="MENU_OPTIONS">Options</string>
    <string name="SYSTEM_TIME">Time</string>
    <string name="ZONES">Zones</string>
    <string name="SYSTEM_STATUS_AC_POWER_OFF">AC Power Off</string>
    <string name="SYSTEM_STATUS_ALARM_ACTIVATION">Alarm Activated</string>
    <string name="SYSTEM_STATUS_BATTERY_LOW">Battery Low</string>
    <string name="SYSTEM_STATUS_DCM_TROUBLE">DCM Trouble</string>
    <string name="SYSTEM_STATUS_PHONE_LINE_DEAD">Phone Line Dead</string>
    <string name="SYSTEM_STATUS_SECURITY_ARMING">Security Arming</string>
    <string name="SYSTEM_STATUS_SYSTEM_OK">System OK</string>
    <string name="SYSTEM_STATUS">Status</string>
	<string name="PHONE_LINE_STATUS">Phone Line Status</string>
	<string name="PHONE_LINE_STATUS_DEAD">Dead</string>
	<string name="PHONE_LINE_STATUS_OFF_HOOK">Off Hook</string>
	<string name="PHONE_LINE_STATUS_ON_HOOK">On Hook</string>
	<string name="PHONE_LINE_STATUS_RING">Ring</string>
	<string name="PHONE_LINE_STATUS_UNKNOWN">Unknown</string>
	<string name="SECURITY_MODE">Security Mode</string>
	<string name="SECURITY_MODE_AWAY">Away</string>
	<string name="SECURITY_MODE_DAY">Day</string>
	<string name="SECURITY_MODE_NIGHT">Night</string>
	<string name="SECURITY_MODE_OFF">Off</string>
	<string name="SECURITY_MODE_VACATION">Vacation</string>
	<string name="SYSTEM_ALL_UNITS">All Units</string>
	<string name="SYSTEM_ALL_UNITS_OFF">Off</string>
	<string name="SYSTEM_ALL_UNITS_ON">On</string>
	<string name="EXECUTION_SUCCESS">Operation successful</string>
	<string name="EXECUTION_FAILURE">Operation failed</string>
	<string name="LOADING">Loading&#8230;</string>
	<string name="WEB_SERVICE_URL">http://mleclerc.homeip.net/aegiswebservice/aegiswebservice</string>
	<string name="TEMPERATURE_CURRENT">Current Temperature</string>
	<string name="TEMPERATURE_FAN_MODE">Fan Mode</string>
	<string name="TEMPERATURE_FAN_MODE_AUTO">Auto</string>
	<string name="TEMPERATURE_FAN_MODE_ON">On</string>
	<string name="TEMPERATURE_HOLD_MODE">Hold Mode</string>
	<string name="TEMPERATURE_HOLD_MODE_HOLD">Hold</string>
	<string name="TEMPERATURE_HOLD_MODE_OFF">Off</string>
	<string name="TEMPERATURE_MAX">Max Temperature</string>
	<string name="TEMPERATURE_MIN">Min Temperature</string>
	<string name="TEMPERATURE_SYSTEM_MODE">System Mode</string>
	<string name="TEMPERATURE_SYSTEM_MODE_AUTO">Auto</string>
	<string name="TEMPERATURE_SYSTEM_MODE_COOL">Cool</string>
	<string name="TEMPERATURE_SYSTEM_MODE_EMERGENCY_HEAT">Emergency Heat</string>
	<string name="TEMPERATURE_SYSTEM_MODE_HEAT">Heat</string>
	<string name="TEMPERATURE_SYSTEM_MODE_OFF">Off</string>
	<string name="MESSAGE_ACTION_CLEAR">Off</string>
	<string name="MESSAGE_ACTION_LOG">Log</string>
	<string name="MESSAGE_ACTION_PLAY">Call {0}</string>
	<string name="MESSAGE_ACTION_SHOW">On</string>
	<string name="MESSAGE_NAME">{0}. {1}</string>
	<string name="BUTTON_EXECUTE">Execute</string>
	<string name="BUTTON_NAME">{0}. {1}</string>
	<string name="UNIT_CONDITION_OFF">Off</string>
	<string name="UNIT_CONDITION_ON">On</string>
	<string name="UNIT_NAME">{0}. {1}</string>
	<string name="ZONE_CONDITION_NOT_READY">Not Ready</string>
	<string name="ZONE_CONDITION_SECURE">Secure</string>
	<string name="ZONE_CONDTION_TROUBLE">Trouble</string>
	<string name="ZONE_LATCHED_ALARM_STATUS_RESET">Reset</string>
	<string name="ZONE_LATCHED_ALARM_STATUS_SECURE">Secure</string>
	<string name="ZONE_LATCHED_ALARM_STATUS_TRIPPED">Tripped</string>
	<string name="ZONE_NAME">{0}. {1}</string>	
	<string name="SYSTEM_TYPE">System Type</string>
	<string name="SYSTEM_TYPE_AEGIS">Aegis</string>
	<string name="SYSTEM_TYPE_AEGIS_2000">Aegis 2000</string>
	<string name="SYSTEM_TYPE_HAI_OMNI">HAI Omni</string>
	<string name="SYSTEM_TYPE_HAI_OMNI_II">HAI Omni II</string>
	<string name="SYSTEM_TYPE_HAI_OMNI_IIE">HAI Omni IIe</string>
	<string name="SYSTEM_TYPE_HAI_OMNI_LT">HAI Omni LT</string>
	<string name="SYSTEM_TYPE_HAI_OMNI_PRO">HAI Omni Pro</string>
	<string name="SYSTEM_TYPE_HAI_OMNI_PRO_II">HAI Omni Pro II</string>
	<string name="SYSTEM_VERSION">System Version</string>
	<string name="EVENTLOG">Event Log</string>
	<string name="EVENTLOG_ALARM_ACTIVATED">Alarm {0} activated in area {1}</string>
	<string name="EVENTLOG_ALARM_RESET">Alarm {0} reset in area {1}</string>
	<string name="EVENTLOG_ALL_ZONES_RESTORED">All area {1} zones restored with code {0}</string>
	<string name="EVENTLOG_AWAY">Area {1} armed in Away mode with code {0}</string>
	<string name="EVENTLOG_DAY">Area {1} armed in Day mode with code {0}</string>
	<string name="EVENTLOG_DAY_INSTANT">Area {1} armed in Day Instant mode with code {0}</string>
	<string name="EVENTLOG_DISARMED">Area {1} armed in Disarm mode with code {0}</string>
	<string name="EVENTLOG_DOWNLOADING">Downloading&#8230;</string>
	<string name="EVENTLOG_LOAD">Load</string>
	<string name="EVENTLOG_MESSAGE_LOGGED">Message {1} logged</string>
	<string name="EVENTLOG_NIGHT">Area {1} armed in Night mode with code {0}</string>
	<string name="EVENTLOG_NIGHT_DELAYED">Area {1} armed in Night Delayed mode with code {0}</string>
	<string name="EVENTLOG_PC_ACCESS">PC access with code {0}</string>
	<string name="EVENTLOG_REMOTE_PHONE_ACCESS">Remote phone access with code {0}</string>
	<string name="EVENTLOG_REMOTE_PHONE_LOCKOUT">Remote phone lockout</string>
	<string name="EVENTLOG_SYSTEM_RESET">System reset</string>
	<string name="EVENTLOG_VACATION">Area {1} armed in Vacation mode with code {0}</string>
	<string name="EVENTLOG_VIEW">View</string>
	<string name="EVENTLOG_ZONE_AUTO_BYPASSED">Zone {1} auto bypassed</string>
	<string name="EVENTLOG_ZONE_BYPASSED">Zone {1} bypassed with code {0}</string>
	<string name="EVENTLOG_ZONE_RESTORED">Zone {1} restored with code {0}</string>
	<string name="EVENTLOG_ZONE_TRIPPED">Zone {1} tripped</string>
	<string name="EVENTLOG_ZONE_TROUBLE">Zone {1} trouble</string>
	<string name="EVENTLOG_ZONE_TROUBLE_CLEARED">Zone {1} trouble cleared</string>
	<string name="LOCAL_PHONE_NUMBER">Local Phone Number</string>
	<string name="SUNRISE_TIME">Sunrise</string>
	<string name="SUNSET_TIME">Sunset</string>
	<string name="DIALOG_ERROR_TITLE">Network Error</string>
	<string name="DIALOG_ERROR_MESSAGE">Error loading the %1$s category.</string>
	<string name="DIALOG_ERROR_BUTTON">OK</string>	
	<string name="MODEL_SOAP">Use SOAP Interface</string>	
	<string name="MODEL_OMNILINK">Use OmniLink Interface</string>
	<string name="SETTINGS_IP_ADDRESS">IP Address</string>
	<string name="SETTINGS_PORT">Port Number</string>
	<string name="SETTINGS_PRIVATE_KEY_1">Network Encryption Key Part 1</string>
	<string name="SETTINGS_NETWORK_TIMEOUT">Network Timeout</string>
	<string name="SETTINGS_PRIVATE_KEY_2">Network Encryption Key Part 2</string>
	<string name="EXECUTING">Executing&#8230;</string>	
</resources>