<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference android:key="ip_address" android:title="@string/SETTINGS_IP_ADDRESS" android:defaultValue="192.168.0.101" />
    <EditTextPreference android:key="port" android:title="@string/SETTINGS_PORT" android:defaultValue="4369" android:numeric="integer" android:maxLength="5"/>
    <EditTextPreference android:key="private_key_1" android:title="@string/SETTINGS_PRIVATE_KEY_1" android:enabled="true" android:defaultValue="a0-b1-c2-d3-e4-f5-a6-b7" />
    <EditTextPreference android:key="private_key_2" android:title="@string/SETTINGS_PRIVATE_KEY_2" android:defaultValue="c8-d9-e0-f1-a2-b3-c4-d5" /><EditTextPreference android:key="network_timeout" android:title="@string/SETTINGS_NETWORK_TIMEOUT" android:defaultValue="15" android:numeric="integer" android:maxLength="3"/>
    
</PreferenceScreen>